Fix non-component Win-Clang build of headless_shell

It was failing due to unused private member variables and an unused constant.

BUG=722048
TBR=dvallet,skyostil

Review-Url: https://codereview.chromium.org/2878253002
Cr-Commit-Position: refs/heads/master@{#471597}

Former-commit-id: 727830d6051803fe78533922089672dfb652b3ac